--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://LucileGombert.github.io/CryptoTracker/",
+  "homepage": "http://LucileGombert.github.io/CryptoTracker",
   "name": "price-tracker",
   "version": "0.1.0",
   "private": true,
